Playback status and validation of YT video ids.

--- a/app/src/radioZamaneh/res/raw/youtube_player.html
+++ b/app/src/radioZamaneh/res/raw/youtube_player.html
@@ -44,6 +44,7 @@
             isVideoLoaded = true;
             isLoadingVideo = false;
             Android.isCueing(false);
+            Android.setDuration(player.getDuration());
         }
         if (isVideoLoaded) {
             Android.onStateChange(event.data);
